--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <section>
+        <h1>CALCULATOR</h1>
         <div class="container">
             <div class="calculator">
                 <input type="text" placeholder=" 0" id="output-screen">
-                <button onclick="Clear()" id="cl">AC</button>
-                <button onclick="del('')"> DEL</button>
+                <button onclick="Clearscreen()">AC</button>
+                <button onclick="del()"> DEL</button>
                 <button onclick="display('%')">%</button>
                 <button onclick="display('/')">/</button>
                 <button onclick="display('7')">7</button>
@@ -34,6 +36,7 @@
                 </div>
         </div>
         <script src="main.js"></script>
+        
         
 
 
